--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,15 @@ author:
   bio:
   email:
   facebook: # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
-  twitter: https://twitter.com/thornberry_evan
+  twitter: thornberry_evan
   weibo: # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   telegram: # "user_name" the last part of your profile url, e.g. https://t.me/user_name
   medium: # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu: # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban: # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin: https://www.linkedin.com/in/evan-thornberry-1565bba0
-  github: https://github.com/ect123
+  linkedin: evan-thornberry-1565bba0
+  github: ect123
   npm: # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 ## => GitHub Repository (if the site is hosted by GitHub)
